# TinySeries

./: .gitignore  README.md
Lesson01/1.第一次尝试/: tgaimage.h
Lesson01/4.运行速度测试/: CMakeLists.txt  main.cpp
Lesson01/5.线框渲染/: geometry.h
Lesson02/1.扫线法画三角形/1.三角形线框/: main.cpp
Lesson02/2.重心坐标绘制/: CMakeLists.txt
Lesson02/3.填充随机颜色/: main.cpp  output.tga
Lesson03/1.Y-Buffer/: main.cpp
Lesson03/2.Z-Buffer/: main.cpp
Lesson03/3.加入纹理/: CMakeLists.txt  geometry.h  main.cpp
Lesson04/1.2D矩阵变换/: geometry.h  model.cpp
Lesson04/2.实现近大远小/: geometry.h  main.cpp  model.cpp  tgaimage.h
Lesson05/加入视角变换/: main.cpp  model.cpp  zbuffer.tga
Lesson06/1.代码重构&GouraudShader/: main.cpp
Lesson06/2.纹理/: main.cpp
Lesson06/3.法线贴图/: main.cpp
Lesson06/4.高光/: main.cpp
Lesson06/5.切线空间/: main.cpp  tgaimage.cpp  tgaimage.h
Lesson07/1.DepthBuffer/: main.cpp
Lesson07/2.ShadowMap/: main.cpp  model.cpp  our_gl.cpp  our_gl.h
Lesson08/1.暴力解/: 1000occl.tga  framebuffer.tga  geometry.cpp  main.cpp  our_gl.cpp
Lesson08/2.屏幕空间环境光遮蔽/: CMakeLists.txt  main.cpp  tgaimage.h
Lesson09/1.默认渲染设置/: CMakeLists.txt  main.cpp
RayTracer/: CMakeLists.txt  main.cpp
RayTracer/Renderer/: CMakeLists.txt  Geometry.hpp  Interval.hpp  Math.hpp  Ray.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Sphere.hpp  Utilities.hpp
RayTracer/Source/: CMakeLists.txt
RayTracer/Source/Renderer/: Renderer.cpp  Renderer.hpp
RayTracer/Source/Scene/: AABB.hpp  BVH.hpp  Camera.cpp  Camera.hpp  ConstantMedium.hpp  Geometry.hpp  Light.hpp  Material.cpp  Material.hpp  Quad.hpp  Ray.hpp  Sphere.hpp  Texture.cpp  Texture.hpp  Worlds.cpp  Worlds.hpp
RayTracer/Source/Utilities/: AABB.hpp  Interval.cpp  Interval.hpp  Math.cpp  Math.hpp  PerlinNoise.cpp  PerlinNoise.hpp  RTW_STBImage.hpp  Utilities.hpp
RayTracer/Tests/: CMakeLists.txt  RayTracerTest.cpp
TinyRenderer/Lesson00/画点/: main.cpp
TinyRenderer/Lesson01/1.第一次尝试/: main.cpp
TinyRenderer/Lesson01/2.第二次尝试/: main.cpp
TinyRenderer/Lesson01/3.第三次尝试/: main.cpp
TinyRenderer/Lesson01/5.线框渲染/: main.cpp
TinyRenderer/Lesson02/1.扫线法画三角形/2.扫线法绘制/: main.cpp  model.cpp
TinyRenderer/Lesson02/2.重心坐标绘制/: main.cpp  model.h
TinyRenderer/Lesson02/4.添加光照/: main.cpp
TinyRenderer/Lesson03/1.Y-Buffer/: geometry.h
TinyRenderer/Lesson03/2.Z-Buffer/: geometry.h  model.cpp
TinyRenderer/Lesson03/3.加入纹理/: model.h  output.tga
TinyRenderer/Lesson04/1.2D矩阵变换/: geometry.cpp  main.cpp
TinyRenderer/Lesson04/2.实现近大远小/: main.cpp  output.tga  zbuffer.tga
TinyRenderer/Lesson05/加入视角变换/: model.h  output.tga
TinyRenderer/Lesson06/2.纹理/: our_gl.cpp
TinyRenderer/Lesson06/4.高光/: our_gl.h
TinyRenderer/Lesson06/5.切线空间/: CMakeLists.txt  model.h  our_gl.cpp  our_gl.h
TinyRenderer/Lesson07/1.DepthBuffer/: model.cpp  our_gl.cpp
TinyRenderer/Lesson08/1.暴力解/: geometry.h  occl.tga  tgaimage.cpp
TinyRenderer/Lesson08/2.屏幕空间环境光遮蔽/: geometry.h  our_gl.h
TinyRenderer/Lesson09/1.默认渲染设置/: main.cpp
